--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -87,7 +87,7 @@ services:
       - /srv/www/static_mealpedant/original:/photo_original
       - $HOME/logs/mealpedant:/logs
       - /srv/www/static_mealpedant:/static:ro
-      - $HOME/mealpedant/docker/env/:/app_env:ro
+      - $HOME/mealpedant/docker/env/.api.env:/app_env/.api.env:ro
       - $HOME/databases/mealpedant/redis_data:/redis_data:ro
     ports:
       - "127.0.0.1:8899:8899"
