--- a/docker/dev.docker-compose.yml
+++ b/docker/dev.docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: mealpedant_postgres
     hostname: mealpedant_postgres
     build:
-      context: /workspaces/mealpedant
+      context: /workspaces/mealpedant_api
       dockerfile: ./docker/dockerfile/postgres.dev.Dockerfile
       args:
         - DOCKER_UID=${DOCKER_UID}
@@ -24,7 +24,7 @@ services:
     restart: always
     shm_size: 256MB
     volumes:
-      - /workspaces/mealpedant/db_data/pg_data:/pg_data
+      - /workspaces/mealpedant_api/db_data/pg_data:/pg_data
     ports:
       - 127.0.0.1:5434:5434
     command: -p 5434
@@ -47,7 +47,7 @@ services:
     container_name: mealpedant_redis
     hostname: mealpedant_redis
     build:
-      context: /workspaces/mealpedant
+      context: /workspaces/mealpedant_api
       dockerfile: ./docker/dockerfile/redis.Dockerfile
       args:
         - DOCKER_UID=${DOCKER_UID}
@@ -56,7 +56,7 @@ services:
         - DOCKER_TIME_CITY=${DOCKER_TIME_CITY}
     env_file: ./env/.redis.env
     volumes:
-      - /workspaces/mealpedant/db_data/redis_data:/redis_data
+      - /workspaces/mealpedant_api/db_data/redis_data:/redis_data
     cap_drop:
       - all
     security_opt:
@@ -84,21 +84,21 @@ services:
     container_name: mealpedant_api
     hostname: mealpedant_api
     build:
-      context: /workspaces/mealpedant
-      dockerfile: docker/dockerfile/api.Dockerfile
+      context: /workspaces/mealpedant_api
+      dockerfile: docker/dockerfile/api.dev.Dockerfile
       args:
         - DOCKER_UID=${DOCKER_UID}
         - DOCKER_GUID=${DOCKER_GUID}
         - DOCKER_TIME_CONT=${DOCKER_TIME_CONT}
         - DOCKER_TIME_CITY=${DOCKER_TIME_CITY}
     volumes:
-      - /workspaces/mealpedant/location_local/backups:/backups
-      - /workspaces/mealpedant/location_local/static/converted:/photo_converted
-      - /workspaces/mealpedant/location_local/static/original:/photo_original
+      - /workspaces/mealpedant_api/location_local/backups:/backups
+      - /workspaces/mealpedant_api/location_local/static/converted:/photo_converted
+      - /workspaces/mealpedant_api/location_local/static/original:/photo_original
       - /dev/shm:/logs
-      - /workspaces/mealpedant/location_local:/static:ro
-      - /workspaces/mealpedant/docker/env:/app_env:ro
-      - /workspaces/mealpedant/db_data/redis_data:/redis_data:ro
+      - /workspaces/mealpedant_api/location_local:/static:ro
+      - /workspaces/mealpedant_api/docker/env:/app_env:ro
+      - /workspaces/mealpedant_api/db_data/redis_data:/redis_data:ro
     ports:
       - "127.0.0.1:8899:8899"
     cap_drop:
