--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ anyhow="1.0"
 argon2 = "0.4"
 axum = {version="0.5", features=["multipart"]}
 axum-extra = {version = "0.3",features =["cookie-private"] }
-bytes = "1.1"
-cansi = "2.1.1"
+bytes = "1.2"
+cansi = "2.2"
 cookie = "0.16"
 dotenv="0.15"
 futures = "0.3"
@@ -31,7 +31,7 @@ openssl = { version = '0.10', features = ["vendored"] }
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 redis = { version = "0.21", features = ["tokio-comp"] }
-regex = "1.5"
+regex = "1.6"
 reqwest = {version = "0.11", features=["json", "native-tls", "cookies", "multipart"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -39,19 +39,14 @@ sha1 = "0.10"
 sqlx = {version="0.6", features = ["runtime-tokio-rustls", "postgres", "time", "ipnetwork" ]}
 thiserror="1.0"
 time = { version="0.3", features=["serde", "parsing", "local-offset"] }
-tokio = {version = "1.19", features=["full"]}
+tokio = {version = "1.20", features=["full"]}
 tokio-util = { version="0.7" }
 tower = { version = "0.4", features = ["full"] }
 tower-http = {version="0.3", features = ["full"] }
 tracing = "0.1"
 tracing-appender = "0.2"
-tracing-subscriber = "0.3"
+tracing-subscriber = {version="0.3", features = ["json"]}
 uuid = {version="1.1", features=["serde"]}
-
-
-[dev-dependencies]
-# cargo-llvm-cov = "0.4.9"
-# rustup component add llvm-tools-preview --toolchain 1.61.0-x86_64-unknown-linux-gnu
 
 [profile.release]
 lto = true
