fix: docker-compose locations

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,14 +8,14 @@ services:
     image: mealpedant_postgres:1.0.3
     container_name: mealpedant_postgres
     build:
-      context:  $HOME/mealpedant
-      dockerfile: $HOME/mealpedant/docker/dockerfile/postgres.Dockerfile
+      context:  $HOME/mealpedant_api/
+      dockerfile: $HOME/mealpedant_api/docker/dockerfile/postgres.Dockerfile
       args:
         - DOCKER_UID=${DOCKER_UID}
         - DOCKER_GUID=${DOCKER_GUID}
         - DOCKER_TIME_CONT=${DOCKER_TIME_CONT}
         - DOCKER_TIME_CITY=${DOCKER_TIME_CITY}
-    env_file: $HOME/mealpedant/docker/env/.postgres.env
+    env_file: $HOME/mealpedant_api/docker/env/.postgres.env
     cap_drop:
       - all
     security_opt:
@@ -42,14 +42,14 @@ services:
     container_name: mealpedant_redis
     hostname: mealpedant_redis
     build:
-      context:  $HOME/mealpedant
-      dockerfile: $HOME/mealpedant/docker/dockerfile/redis.Dockerfile
+      context:  $HOME/mealpedant_api/
+      dockerfile: $HOME/mealpedant_api/docker/dockerfile/redis.Dockerfile
       args:
         - DOCKER_UID=${DOCKER_UID}
         - DOCKER_GUID=${DOCKER_GUID}
         - DOCKER_TIME_CONT=${DOCKER_TIME_CONT}
         - DOCKER_TIME_CITY=${DOCKER_TIME_CITY}
-    env_file: $HOME/mealpedant/docker/env/.redis.env
+    env_file: $HOME/mealpedant_api/docker/env/.redis.env
     volumes:
       - $HOME/databases/mealpedant/redis_data:/redis_data
     cap_drop:
@@ -74,7 +74,7 @@ services:
     container_name: mealpedant_api
     hostname: mealpedant_api
     build:
-      context: $HOME/mealpedant
+      context: $HOME/mealpedant_api/
       dockerfile: docker/dockerfile/api.Dockerfile
       args:
         - DOCKER_UID=${DOCKER_UID}
@@ -87,7 +87,7 @@ services:
       - /srv/www/static_mealpedant/original:/photo_original
       - $HOME/logs/mealpedant:/logs
       - /srv/www/static_mealpedant:/static:ro
-      - $HOME/mealpedant/docker/env/.api.env:/app_env/.api.env:ro
+      - $HOME/mealpedant_api/docker/env/.api.env:/app_env/.api.env:ro
       - $HOME/databases/mealpedant/redis_data:/redis_data:ro
     ports:
       - "127.0.0.1:8899:8899"
