chore: dotenv > dotenvy, uuid upgraded

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ axum = {version="0.5", features=["multipart"]}
 axum-extra = {version = "0.3",features =["cookie-private"] }
 bytes = "1.2"
 cookie = "0.16"
-dotenv="0.15"
+dotenvy="0.15"
 futures = "0.3"
 google-authenticator = "0.3"
 hex = "0.4"
@@ -44,7 +44,7 @@ tower-http = {version="0.3", features = ["full"] }
 tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = {version="0.3", features = ["json"]}
-uuid = {version="1.1", features=["serde"]}
+uuid = {version="1.2", features=["serde"]}
 
 # [dev-dependencies]
 
