--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ readme = "README.md"
 
 [dependencies]
 argon2 = "0.4"
-axum = {version="0.5", features=["multipart"]}
-axum-extra = {version = "0.3",features =["cookie-private"] }
-bytes = "1.2"
+axum = {version="0.6", features=["multipart", "macros"]}
+axum-extra = {version = "0.4",features =["cookie-private"] }
+bytes = "1.3"
 cookie = "0.16"
 dotenvy="0.15"
 futures = "0.3"
@@ -29,7 +29,7 @@ openssl = { version = '0.10', features = ["vendored"] }
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 redis = { version = "0.22", features = ["tokio-comp"] }
-regex = "1.6"
+regex = "1.7"
 reqwest = {version = "0.11", features=["json", "native-tls", "cookies", "multipart"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -37,7 +37,7 @@ sha1 = "0.10"
 sqlx = {version="0.6", features = ["runtime-tokio-rustls", "postgres", "time", "ipnetwork" ]}
 thiserror="1.0"
 time = { version="0.3", features=["serde", "parsing", "local-offset"] }
-tokio = {version = "1.21", features=["full"]}
+tokio = {version = "1.22", features=["full"]}
 tokio-util = { version="0.7" }
 tower = { version = "0.4", features = ["full"] }
 tower-http = {version="0.3", features = ["full"] }
