--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,9 @@ google-authenticator = "0.3"
 hex = "0.4"
 http-body = "0.4"
 image = "0.24"
-lazy_static = "1.4"
 lettre = { version = "0.10", default-features = false, features = ["builder", "hostname", "smtp-transport","tokio1", "tokio1-rustls-tls"] }
 mrml = "1.2"
+once_cell = "1.16"
 openssl = { version = '0.10', features = ["vendored"] }
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
