feat: github workflow use cache

--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -16,6 +16,9 @@ jobs:
       - name: install rust
         uses: dtolnay/rust-toolchain@stable
 
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
+
       - name: build x86_64
         run: cargo build --release
 
