--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ argon2 = "0.4"
 axum = {version="0.6", features=["multipart", "macros"]}
 axum-extra = {version = "0.4",features =["cookie-private"] }
 bytes = "1.3"
-cookie = "0.16"
+cookie = "0.17"
 dotenvy="0.15"
 futures = "0.3"
 google-authenticator = "0.3"
@@ -25,20 +25,20 @@ http-body = "0.4"
 image = "0.24"
 lettre = { version = "0.10", default-features = false, features = ["builder", "hostname", "smtp-transport","tokio1", "tokio1-rustls-tls"] }
 mrml = "1.2"
-once_cell = "1.16"
+once_cell = "1.17"
 openssl = { version = '0.10', features = ["vendored"] }
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 redis = { version = "0.22", features = ["tokio-comp"] }
 regex = "1.7"
-reqwest = {version = "0.11", features=["json", "native-tls", "cookies", "multipart"]}
+reqwest = {version = "0.11", features=["json", "native-tls", "gzip", "brotli", "json","cookies", "multipart"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha1 = "0.10"
 sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time", "ipnetwork" ]}
 thiserror = "1.0"
 time = { version = "0.3", features=["serde", "parsing", "local-offset"] }
-tokio = {version = "1.23", features=["full"]}
+tokio = {version = "1.24", features=["full"]}
 tokio-util = { version="0.7" }
 tower = { version = "0.4", features = ["full"] }
 tower-http = {version = "0.3", features = ["full"] }
