--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,38 +22,47 @@
 	],
 
 	// "postCreateCommand": "cargo install cargo-watch",
-	"postCreateCommand": "cargo install cargo-watch",
-	// "postStartCommand": "mkdir /dev/shm/photo_original /dev/shm/photo_converted /dev/shm/backups && echo '2022-08-03T13:34:05.928256Z  INFO mealpedant::api: src/api/mod.rs:273: starting=starting server @ 127.0.0.1:8899' > /dev/shm/api.log",
-	"postStartCommand": "mkdir /dev/shm/photo_original /dev/shm/photo_converted /dev/shm/backups",
-	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		"lldb.executable": "/usr/bin/lldb",
-		// VS Code don't watch files under ./target
-		"files.watcherExclude": {
-			"**/target/**": true
-		},
-		"rust-analyzer.checkOnSave.command": "clippy"
+	"postCreateCommand": "cargo install cargo-watch typos-cli",
+	"postStartCommand": "mkdir - p/dev/shm/mealpedant/photo_original /dev/shm/mealpedant/photo_converted /dev/shm/mealpedant/backups /dev/shm/mealpedant/pg_data && mkdir -p /dev/shm/mealpedant/redis_data && sudo chown -R vscode:vscode /dev/shm/mealpedant",
+
+
+	"customizations": {
+		"vscode": {
+				// Add the IDs of extensions you want installed when the container is created.
+			"extensions": [
+				"bmuskalla.vscode-tldr",
+				"christian-kohler.path-intellisense",
+				"ms-vscode.live-server",
+				"mutantdino.resourcemonitor",
+				"rangav.vscode-thunder-client",
+				"rust-lang.rust-analyzer",
+				"serayuzgur.crates",
+				"tamasfe.even-better-toml",
+				"timonwong.shellcheck",
+				"vadimcn.vscode-lldb"
+			],
+
+			"settings": {
+				"lldb.executable": "/usr/bin/lldb",
+				// VS Code don't watch files under ./target
+				"files.watcherExclude": {
+					"**/target/**": true
+				},
+				"rust-analyzer.checkOnSave.command": "clippy"
+			}
+		}
 	},
-
-	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [
-		"vadimcn.vscode-lldb",
-		"mutantdino.resourcemonitor",
-		"rust-lang.rust-analyzer",
-		"tamasfe.even-better-toml",
-		"serayuzgur.crates",
-		"christian-kohler.path-intellisense",
-		"timonwong.shellcheck",
-		"ms-vscode.live-server",
-		"rangav.vscode-thunder-client",
-		"bmuskalla.vscode-tldr"
-	],
-
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"features": {
-		"docker-in-docker": "latest",
-		"git": "os-provided"
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {
+			"version": "latest",
+			"moby": true,
+			"dockerDashComposeVersion":"v2"
+		},
+		"ghcr.io/devcontainers/features/git:1": {
+				"version":"os-provided"
+			}
 	}
 }
