--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ readme = "README.md"
 argon2 = "0.4"
 axum = {version="0.6", features=["multipart", "macros"]}
 axum-extra = {version = "0.4",features =["cookie-private"] }
-bytes = "1.3"
+bytes = "1.4"
 cookie = "0.17"
 dotenvy="0.15"
 futures = "0.3"
@@ -26,26 +26,25 @@ image = "0.24"
 lettre = { version = "0.10", default-features = false, features = ["builder", "hostname", "smtp-transport","tokio1", "tokio1-rustls-tls"] }
 mrml = "1.2"
 once_cell = "1.17"
-openssl = { version = '0.10', features = ["vendored"] }
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 redis = { version = "0.22", features = ["tokio-comp"] }
 regex = "1.7"
-reqwest = {version = "0.11", features=["json", "native-tls", "gzip", "brotli", "json","cookies", "multipart"]}
+reqwest = {version = "0.11", default-features = false, features=["json", "rustls-tls-native-roots", "gzip", "brotli", "json","cookies", "multipart"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha1 = "0.10"
 sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time", "ipnetwork" ]}
 thiserror = "1.0"
 time = { version = "0.3", features=["serde", "parsing", "local-offset"] }
-tokio = {version = "1.24", features=["full"]}
+tokio = {version = "1.25", features=["full"]}
 tokio-util = { version="0.7" }
 tower = { version = "0.4", features = ["full"] }
 tower-http = {version = "0.3", features = ["full"] }
 tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = {version="0.3", features = ["json"]}
-uuid = {version="1.2", features=["serde"]}
+uuid = {version="1.3", features=["serde"]}
 
 [profile.release]
 lto = true
