--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,8 +22,9 @@
 	],
 
 	// "postCreateCommand": "cargo install cargo-watch",
-	"postCreateCommand": "cargo install cargo-watch typos-cli",
-	"postStartCommand": "mkdir - p/dev/shm/mealpedant/photo_original /dev/shm/mealpedant/photo_converted /dev/shm/mealpedant/backups /dev/shm/mealpedant/pg_data && mkdir -p /dev/shm/mealpedant/redis_data && sudo chown -R vscode:vscode /dev/shm/mealpedant",
+	"postStartCommand": "sudo mkdir -p /dev/shm/mealpedant/photo_original /dev/shm/mealpedant/photo_converted /dev/shm/mealpedant/backups /dev/shm/mealpedant/pg_data /dev/shm/mealpedant/redis_data && sudo chown -R vscode:vscode /dev/shm/mealpedant",
+	// cargo install cargo-watch typos-cli && 
+	"postCreateCommand": "cargo install cargo-watch typos-cli && wget https://dl.filippo.io/age/latest?for=linux/amd64 -O /tmp/age.tar.gz && tar vxf /tmp/age.tar.gz -C /tmp && install -Dm 755 /tmp/age/age -t \"${HOME}/.local/bin\"",
 
 
 	"customizations": {
