--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,10 @@
 		"source=/etc/localtime,target=/etc/localtime,type=bind,readonly"
 	],
 
+	"containerEnv": {
+		"CARGO_REGISTRIES_CRATES_IO_PROTOCOL": "sparse"
+	},
+
 	// "postCreateCommand": "cargo install cargo-watch",
 	"postStartCommand": "sudo mkdir -p /dev/shm/mealpedant/photo_original /dev/shm/mealpedant/photo_converted /dev/shm/mealpedant/backups /dev/shm/mealpedant/pg_data /dev/shm/mealpedant/redis_data && sudo chown -R vscode:vscode /dev/shm/mealpedant",
 	// cargo install cargo-watch typos-cli && 
