--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ bytes = "1.4"
 cookie = "0.17"
 dotenvy="0.15"
 futures = "0.3"
-google-authenticator = "0.3"
 hex = "0.4"
 http-body = "0.4"
 image = "0.24"
@@ -39,12 +38,17 @@ thiserror = "1.0"
 time = { version = "0.3", features=["serde", "parsing", "local-offset"] }
 tokio = {version = "1.26", features=["full"]}
 tokio-util = { version="0.7" }
+totp-rs = { version = "4.2" }
 tower = { version = "0.4", features = ["full"] }
 tower-http = {version = "0.4", features = ["full"] }
 tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = {version="0.3", features = ["json"]}
 uuid = {version="1.3", features=["serde"]}
+
+
+[dev-dependencies]
+base32 = "0.4.0"
 
 [profile.release]
 lto = true
