--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,18 +24,18 @@ http-body = "0.4"
 image = "0.24"
 lettre = { version = "0.10", default-features = false, features = ["builder", "hostname", "smtp-transport","tokio1", "tokio1-rustls-tls"] }
 mrml = "1.2"
-once_cell = "1.17"
+once_cell = "1.18"
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 redis = { version = "0.23", features = ["tokio-comp"] }
 regex = "1.8"
-reqwest = { version = "0.11", default-features = false, features= ["json", "rustls-tls-native-roots", "gzip", "brotli", "json","cookies", "multipart"] }
+reqwest = { version = "0.11", default-features = false, features= ["brotli", "cookies", "gzip", "json", "multipart", "rustls-tls-native-roots"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha1 = "0.10"
-sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time", "ipnetwork" ] }
+sqlx = { version = "0.6", features = ["ipnetwork","postgres","runtime-tokio-rustls","time"] }
 thiserror = "1.0"
-time = { version = "0.3", features= ["serde", "parsing", "local-offset"] }
+time = { version = "0.3", features= ["local-offset", "parseing", "serde"] }
 tokio = { version = "1.28", features= ["full"] }
 tokio-util = { version ="0.7" }
 totp-rs = { version = "5.0" }
