--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ serde_json = "1.0"
 sha1 = "0.10"
 sqlx = { version = "0.6", features = ["ipnetwork","postgres","runtime-tokio-rustls","time"] }
 thiserror = "1.0"
-time = { version = "0.3", features= ["local-offset", "parseing", "serde"] }
+time = { version = "0.3", features= ["local-offset", "parsing", "serde"] }
 tokio = { version = "1.28", features= ["full"] }
 tokio-util = { version ="0.7" }
 totp-rs = { version = "5.0" }
