--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 
 [dependencies]
 argon2 = "0.5"
-axum = { version ="0.6", features= ["multipart", "macros"] }
+axum = { version ="0.6", features= ["macros", "multipart",] }
 axum-extra = { version = "0.7", features = ["cookie-private"] }
 bytes = "1.4"
 cookie = "0.17"
@@ -47,7 +47,7 @@ tracing-subscriber = { version ="0.3", features = ["json"] }
 uuid = { version ="1.3", features= ["serde"] }
 
 [profile.release]
-lto = true
+lto = 'thin'
 codegen-units = 1
 panic = 'abort'
 strip=true
