--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,6 +37,7 @@
 				"ms-vscode.live-server",
 				"mutantdino.resourcemonitor",
 				"rangav.vscode-thunder-client",
+				"redhat.vscode-yaml",
 				"rust-lang.rust-analyzer",
 				"serayuzgur.crates",
 				"tamasfe.even-better-toml",
