--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ cookie = "0.18"
 dotenvy="0.15"
 futures = "0.3"
 hex = "0.4"
-http-body = "0.4"
+http-body = "1.0"
 image = "0.24"
 lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport","tokio1", "tokio1-rustls-tls"] }
 mrml = "1.2"
@@ -36,7 +36,7 @@ sha1 = "0.10"
 sqlx = { version = "0.7", features = ["ipnetwork","postgres","runtime-tokio-rustls","time"] }
 thiserror = "1.0"
 time = { version = "0.3", features= ["local-offset", "parsing", "serde"] }
-tokio = { version = "1.33", features= ["full"] }
+tokio = { version = "1.34", features= ["full"] }
 tokio-util = { version ="0.7" }
 totp-rs = { version = "5.4" }
 tower = { version = "0.4", features = ["full"] }
@@ -45,6 +45,22 @@ tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = { version ="0.3", features = ["json"] }
 uuid = { version ="1.5", features= ["serde"] }
+
+
+[lints.rust]
+unsafe_code = "forbid"
+
+[lints.clippy]
+enum_glob_use = "deny"
+expect_used = "warn"
+nursery = "warn"
+pedantic = "warn"
+todo = "warn"
+unused_async = "warn"
+unwrap_used = "warn"
+module_name_repetitions = "allow"
+doc_markdown = "allow"
+
 
 [profile.release]
 lto = 'thin'
