--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,7 @@
 	],
 	// RUN mkdir /dev/shm/photo_converted /dev/shm/photo_original && chown -R vscode:vscode /dev/shm
 	"mounts": [
-		"source=/dev/shm,target=/dev/shm,type=bind",
+		"source=/run/shm,target=/dev/shm,type=bind",
 		"source=/etc/localtime,target=/etc/localtime,type=bind,readonly"
 	],
 
@@ -34,6 +34,7 @@
 			"extensions": [
 				"bmuskalla.vscode-tldr",
 				"christian-kohler.path-intellisense",
+				"foxundermoon.shell-format",
 				"ms-vscode.live-server",
 				"mutantdino.resourcemonitor",
 				"rangav.vscode-thunder-client",
