--- a/docker/dev.docker-compose.yml
+++ b/docker/dev.docker-compose.yml
@@ -9,12 +9,7 @@ services:
     hostname: mealpedant_postgres
     build:
       context: /workspaces/mealpedant_api
-      dockerfile: ./docker/dockerfile/postgres.dev.Dockerfile
-      args:
-        - DOCKER_GUID=${DOCKER_GUID}
-        - DOCKER_TIME_CITY=${DOCKER_TIME_CITY}
-        - DOCKER_TIME_CONT=${DOCKER_TIME_CONT}
-        - DOCKER_UID=${DOCKER_UID}
+      dockerfile: ./docker/dockerfile/postgres.Dockerfile
     env_file: ./env/.postgres.env
     cap_drop:
       - all
@@ -49,11 +44,6 @@ services:
     build:
       context: /workspaces/mealpedant_api
       dockerfile: ./docker/dockerfile/redis.Dockerfile
-      args:
-        - DOCKER_GUID=${DOCKER_GUID}
-        - DOCKER_TIME_CITY=${DOCKER_TIME_CITY}
-        - DOCKER_TIME_CONT=${DOCKER_TIME_CONT}
-        - DOCKER_UID=${DOCKER_UID}
     env_file: ./env/.redis.env
     volumes:
       - /dev/shm/mealpedant/redis_data:/redis_data
@@ -85,12 +75,7 @@ services:
     hostname: mealpedant_api
     build:
       context: /workspaces/mealpedant_api
-      dockerfile: docker/dockerfile/api.dev.Dockerfile
-      args:
-        - DOCKER_GUID=${DOCKER_GUID}
-        - DOCKER_TIME_CITY=${DOCKER_TIME_CITY}
-        - DOCKER_TIME_CONT=${DOCKER_TIME_CONT}
-        - DOCKER_UID=${DOCKER_UID}
+      dockerfile: docker/dockerfile/api.Dockerfile
     volumes:
       - /dev/shm/mealpedant:/logs
       - /dev/shm/mealpedant/backups:/backups
