--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ axum-extra = { version = "0.9", features = ["cookie-private"] }
 bytes = "1.5"
 cookie = "0.18"
 dotenvy = "0.15"
+fred = "8.0"
 futures = "0.3"
 hex = "0.4"
 http-body = "1.0"
@@ -47,7 +48,6 @@ mrml = "3.0"
 once_cell = "1.19"
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
-redis = { version = "0.24", features = ["aio", "connection-manager", "tokio-comp"] }
 regex = "1.10"
 reqwest = { version = "0.11", default-features = false, features = [
 	"brotli",
