--- a/docker/dev.docker-compose.yml
+++ b/docker/dev.docker-compose.yml
@@ -19,7 +19,7 @@ services:
     restart: always
     shm_size: 256MB
     volumes:
-      - /dev/shm/mealpedant/pg_data:/pg_data
+      - /ramdrive/mealpedant/pg_data:/pg_data
     ports:
       - 127.0.0.1:5434:5434
     command: -p 5434
@@ -46,7 +46,7 @@ services:
       dockerfile: ./docker/dockerfile/redis.Dockerfile
     env_file: ./env/.redis.env
     volumes:
-      - /dev/shm/mealpedant/redis_data:/redis_data
+      - /ramdrive/mealpedant/redis_data:/redis_data
     cap_drop:
       - all
     security_opt:
@@ -77,9 +77,9 @@ services:
       context: /workspaces/mealpedant_api
       dockerfile: docker/dockerfile/api.Dockerfile
     volumes:
-      - /dev/shm/mealpedant:/logs
-      - /dev/shm/mealpedant/backups:/backups
-      - /dev/shm/mealpedant/redis_data:/redis_data:ro
+      - /ramdrive/mealpedant:/logs
+      - /ramdrive/mealpedant/backups:/backups
+      - /ramdrive/mealpedant/redis_data:/redis_data:ro
       - /workspaces/mealpedant_api/docker/env:/app_env:ro
       - /workspaces/mealpedant_api/location_local:/static:ro
       - /workspaces/mealpedant_api/location_local/static/converted:/photo_converted
