--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ futures = "0.3"
 hex = "0.4"
 http-body = "1.0"
 image = "0.25"
+jiff = { version = "0.2", features=["serde"] }
+jiff-sqlx = { version = "0.1", features = ["postgres"] }
 lettre = { version = "0.11", default-features = false, features = [
 	"builder",
 	"hostname",
@@ -68,7 +70,6 @@ sqlx = { version = "0.8", features = [
 	"time",
 ] }
 thiserror = "2.0"
-time = { version = "0.3", features = ["local-offset", "parsing", "serde"] }
 tokio = { version = "1.43", features = ["full"] }
 tokio-util = { version = "0.7" }
 totp-rs = { version = "5.6" }
