--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       dockerfile: $HOME/mealpedant_api.d/docker/dockerfile/api.Dockerfile
     volumes:
       - /srv/backup/mealpedant:/backups
-      - /srv/www/static_mealpedant:/static:ro
+      - /srv/www/static_mealpedant/public:/public:ro
       - /srv/www/static_mealpedant/converted:/photo_converted
       - /srv/www/static_mealpedant/original:/photo_original
       - $HOME/databases.d/mealpedant/redis_data:/redis_data:ro
