--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,8 @@ lettre = { version = "0.11", default-features = false, features = [
 	"tokio1-rustls-tls",
 	"tokio1",
 ] }
-mimalloc = { version = "0.1", default-features = false }
+# Err here - https://github.com/purpleprotocol/mimalloc_rust/issues/133
+mimalloc = { version = "0.1.44", default-features = false }
 mrml = "5.0"
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
