--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,8 +48,7 @@ lettre = { version = "0.11", default-features = false, features = [
 	"tokio1-rustls-tls",
 	"tokio1",
 ] }
-# Err here - https://github.com/purpleprotocol/mimalloc_rust/issues/133
-# mimalloc = { version = "0.1", default-features = false }
+mimalloc = { version = "0.1", default-features = false }
 mrml = "5.0"
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
@@ -73,7 +72,7 @@ sqlx = { version = "0.8", features = [
 	"time",
 ] }
 thiserror = "2.0"
-tokio = { version = "1.44", features = ["full"] }
+tokio = { version = "1.45", features = ["full"] }
 tokio-util = { version = "0.7" }
 totp-rs = { version = "5.7" }
 tower = { version = "0.5", features = ["full"] }
